--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -175,18 +175,11 @@ ul#pFiltersList li:hover{
 	border-color: black;
 }
 
-.pbox {
-	//margin: 0 0 9px;
-	
-}	
 
-#partners-wrap { display: block; width: 281px; margin: 0; }  /*height + padding <= 69 to fit 8pics... plus padding */
+
 
 /* style="position:relative; margin-left:auto; margin-right:auto; left:15px; top:90px;" */
 
-#center-wrap {
-	margin: 0 120px 0 300px;
-}
 
 #flashbox {
 	padding-top: 24px;
@@ -200,35 +193,14 @@ ul#pFiltersList li:hover{
 	width:1000px; clear:both;
 }
 
-#lovely-description {
-	text-indent:50px;
-	width: 560px;
-	padding-top:10px;
-	padding-left:10px;
-	padding-bottom:14px;
-	width:550px;
-	font: 14px "Arial Black", sans-serif;
-	background: #898956;
-}
 
-#lovely-description p {
-	font-family: 'sans serif';
-	font-family:"Times New Roman",Times,serif;
-	font-style: bold;
-	font-size: large;
-	color:DarkBlue;
-	text-indent:45px;
-}
 
 #boldinate {
 	font-weight:normal;
 	color:#00007F;
 }
 
-#right-wrap {
-	float: right;
-	width: 130px;
-}
+
 
 #banner-bottom {
 	margin:auto;
@@ -241,96 +213,3 @@ ul#pFiltersList li:hover{
 
 
 
-
-/*  about us CSS */
-
-#about-div {
-	line-height:20px;
-	font-size: 14px;
-	font-weight:400;
-	font-family:sans-serif;
-	
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 14px;
-	font-weight: bold;
-	color: #333;
-	letter-spacing: 0em;
-	
-}
-
-#about-div p {
-	margin: 1em 0;	
-	font-style: italic;
-}
-
-#about-div h1 {
-	padding-top: 1em;
-	font-weight: bold;
-	font-size: 16px;
-	color: #000;
-	font-style: normal;
-	
-}
-
-ul {
-    padding-left:2em;
-    margin-left:0;
-}
-
-
-
-/*  ERRORS/ 'flash' */
-
-.field_with_errors {
-  margin-top: 10px;
-  padding: 2px;
-  background-color: red;
-  display: table;
-}
-
-.field_with_errors label {
-  color: #fff;
-}
-
-#error_explanation {
-  width: 400px;
-  border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 12px;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
-}
-
-#error_explanation h2 {
-  text-align: left;
-  font-weight: bold;
-  padding: 5px 5px 5px 15px;
-  font-size: 12px;
-  margin: -7px;
-  background-color: #c00;
-  color: #fff;
-}
-
-#error_explanation p {
-  color: #333;
-  margin-bottom: 0;
-  padding: 5px;
-}
-
-#error_explanation ul li {
-  font-size: 12px;
-  list-style: square;
-}
-
-
-.error, .alert {
-    background: none repeat scroll 0 0 #333;
-    border-color: #333;
-    color: #8A1F11;
-}
-
-.error, .alert, .notice, .success, .info {
-    border: 2px solid #DDDDDD;
-    margin-bottom: 1em;
-    padding: 0.8em;
-}
